--- a/sneakers_23/lib/sneakers_23_web/templates/layout/app.html.eex
+++ b/sneakers_23/lib/sneakers_23_web/templates/layout/app.html.eex
@@ -20,6 +20,6 @@
         window.cartId = "<%= @cart_id %>"
       </script>
     <% end %>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/App.js") %>"></script>
   </body>
 </html>
